--- a/forms.html
+++ b/forms.html
@@ -40,7 +40,7 @@
 		$("#modelo").append(new Option("Elige un modelo", ""));
 		$("#modelo").children('option:first').attr("disabled", "disabled");
 		// añade las opciones
-				
+		switch(marca) {
 				case "LEXUS":
 					
 					$("#modelo").append(new Option("CT", "CT"));
