--- a/forms.html
+++ b/forms.html
@@ -308,7 +308,7 @@ const msfController = {
 
       if (filledFields) {
         msf.setConfirmValues(msf.currentStep);
-	msf.submitHiddenForm(msf.currentStep);
+	//msf.submitHiddenForm(msf.currentStep);
 	 
         msf.currentStep++;
 	            //----------------------------------------
@@ -420,7 +420,7 @@ const msfController = {
 <script>
 	var Webflow = Webflow || [];
 	Webflow.push(function () {
-		alert("edit 3");
+		alert("edit 4");
 		let msfData = new MSF({
 			formID: "form-generico",
 			nextButtonID1: "next1",
